fixed catalog overflow

--- a/source/css/base.css
+++ b/source/css/base.css
@@ -22,13 +22,13 @@ html, body {
 
 /*滚动条中滑块部分*/
 ::-webkit-scrollbar-thumb {
-    background-color: #a4a4a4;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+  background-color: rgba(144,147,153,.5);
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #808080;
+  background-color: #a4a4a4;
 }
 
 a {
@@ -80,6 +80,9 @@ a:hover {
     padding: 0;
   }
   .post-catalog {
+    display: none;
+  }
+  .back-to-top {
     display: none;
   }
 }
@@ -324,11 +327,9 @@ a:hover {
 .post-catalog {
   position: absolute;
   top: calc(290px + 88px + 30px);
-  right: 0;
-  min-width: 200px;
-  width: 20%;
+  right: 50px;
+  width: calc(20% - 50px);
   font-size: 1.4rem;
-  border-left: 1px solid rgba(88,88,88,0.1);
   padding-left: 10px;
 }
 
@@ -336,10 +337,11 @@ a:hover {
   opacity: 0.8;
   font-size: 1.6rem;
   font-weight: bold;
+  padding: 5px 0;
 }
 
 .post-catalog .toc {
-  padding-top: 10px;
+  overflow: scroll;
 }
 
 .post-catalog .toc-child {
